--- a/_config.yml
+++ b/_config.yml
@@ -59,14 +59,14 @@ kramdown:
 disqus_username: shianlin2084
 
 # Gitalk
-gitalk:
-  enable: true    #是否开启Gitalk评论
-  clientID: f2c84e7629bb1446c1a4                            #生成的clientID
-  clientSecret: ca6d6139d1e1b8c43f8b2e19492ddcac8b322d0d    #生成的clientSecret
-  repo: shianlin2084.github.io    #仓库名称
-  owner: shinalin2084   #github用户名
-  admin: shianlin2084
-  distractionFreeMode: true #是否启用类似FB的阴影遮罩
+#gitalk:
+#  enable: true    #是否开启Gitalk评论
+#  clientID: f2c84e7629bb1446c1a4                            #生成的clientID
+#  clientSecret: ca6d6139d1e1b8c43f8b2e19492ddcac8b322d0d    #生成的clientSecret
+#  repo: shianlin2084.github.io    #仓库名称
+#  owner: shinalin2084   #github用户名
+#  admin: shianlin2084
+#  distractionFreeMode: true #是否启用类似FB的阴影遮罩
 
 
 # 统计
