--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ github_repo: "https://github.com/shianlin2084/shianlin2084.github.io.git" # you 
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "Goals determine what you going to be!"
+sidebar-about-description: "我们的痛苦通常来自想象而非现实。"
 sidebar-avatar: /img/swimswim.png      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
@@ -20,6 +20,7 @@ RSS: false
 # weibo_username:     qiubaiying
 #zhihu_username:     qiubaiying
 github_username:    shianlin2084
+csdn_username:    shianlin2084
 #facebook_username:  baiying.qiu.7
 #jianshu_username:   e71990ada2fd
 #twitter_username:   qiubaiying
@@ -96,10 +97,10 @@ service-worker: true
 
 
 # Friends
-# friends: [
+#friends: [
 #    {
 #        title: "WY",
-#        href: "http://zhengwuyang.com"
+#        href: "https://me.csdn.net/weixin_43759518"
 #    },{
 #        title: "简书·BY",
 #        href: "http://www.jianshu.com/u/e71990ada2fd"
